tdf#138605 sw change tracking: fix crash with Undo

Regression from commit 469f472fb31c4ef1a57f8ec54ba750c1332feec2
(tdf#138479 tdf#137769 sw ChangesInMargin: fix Undo in paragraphs)

Change-Id: I7826b7920e51733da98c00bfdcb8636d42655afc